2007-11-16  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (setup_style_and_decor):
	(setup_numeric_vals):
	* fvwm/add_window.h:
	* fvwm/style.h:
	* libs/defaults.h:
	* fvwm/events.c (HandleEnterNotify):
	* fvwm/fvwm.c (InitVariables):
	* fvwm/screen.h:
	* fvwm/session.c (SaveGlobalState):
	(LoadGlobalState):
	* fvwm/move_resize.c (DoSnapAttract):
	(CMD_SnapGrid)
	(DoSnapAttract):
	The commands EdgeResistance, SnapGrid and SnapAttraction are obsolete
	They have been replaced by the styles EdgeMoveResistance,
	EdgeMoveDelay, EdgeResizeDelay, SnapGrid and SnapAttraction

2007-10-21  Renato Caldas  <seventhguardian@gmail.com>

	* acinclude.m4:
	* configure.ac:
	use AS_HELP_STRING to format the configure options help strings

2007-10-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/conditional.c:
	some reformatting

2007-10-05  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/ConfigFvwmDefaults:
	restore default action of closing menus for menu titles

2007-10-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/FScreen.c (FindScreenOfXY):
	* fvwm/move_resize.c (GetMoveArguments):
	fixed the "screen w" argument of the Move and other commands

2007-09-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/virtual.c (HandlePaging):
	dont't modify *xl and *yt unless we we really page

2007-09-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_list.h:
	* fvwm/module_list.c:
	a little cleanup

2007-09-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.24

	* NEWS:
	* configure.ac:
	updated for 2.5.23 release

	* libs/Flocale.c (FlocaleEncodeString):
	removed previous warning fix

2007-08-30 Thomas Adam <thomas@edulinux.homeunix.org>

	* fvwm/style.c:
	* fvwm/add_window.c:
	Added new style option:  StartShaded.

2007-08-30  Renato Caldas  <seventhguardian@gmail.com>

	* libs/Flocale.c (FlocaleEncodeString):